// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniProtKBEvidenceTag components should render automatic  1`] = `
<DocumentFragment>
  <button
    aria-controls="0"
    aria-expanded="false"
    class="svg-colour-unreviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      Imported
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="0"
  />
</DocumentFragment>
`;

exports[`UniProtKBEvidenceTag components should render automatic annotation 1`] = `
<DocumentFragment>
  <button
    aria-controls="0"
    aria-expanded="false"
    class="svg-colour-reviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="0"
  />
</DocumentFragment>
`;

exports[`UniProtKBEvidenceTag components should render publications count 1`] = `
<DocumentFragment>
  <button
    aria-controls="0"
    aria-expanded="false"
    class="svg-colour-reviewed evidence-tag"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <test-file-stub
      height="12"
      width="12"
    />
    <span
      class="evidence-tag__label"
    >
      2 publications
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="0"
  />
</DocumentFragment>
`;
